src/plugins/platforms/eglfs/deviceintegration/eglfs_kms/qeglfskmsgbmscreen.cpp
@@ -161,6 +161,9 @@ gbm_surface *QEglFSKmsGbmScreen::createSurface(EGLConfig eglConfig)
 
 void QEglFSKmsGbmScreen::resetSurface()
 {
+    m_flipPending = false;
+    m_gbm_bo_current = nullptr;
+    m_gbm_bo_next = nullptr;
     m_gbm_surface = nullptr;
 }
 
@@ -423,9 +426,15 @@ void QEglFSKmsGbmScreen::flip()
         }
     }
 
+    if (device()->hasAtomicSupport()) {
 #if QT_CONFIG(drm_atomic)
-    device()->threadLocalAtomicCommit(this);
+        if (!device()->threadLocalAtomicCommit(this)) {
+            m_flipPending = false;
+            gbm_surface_release_buffer(m_gbm_surface, m_gbm_bo_next);
+            m_gbm_bo_next = nullptr;
+        }
 #endif
+    }
 }
 
 void QEglFSKmsGbmScreen::flipFinished()
